k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
       # REMOVE CLASSNAME ANNOTATION
      nginx.ingress.kubernetes.io/user-regex: 'true'
        # ADD ANNOTATION
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  # ADD INGRESSCLASSNAME FIELD
  rules:
    - http: 
       paths: 
         - path: /?(.*)
            #UPDATE PATH
           pathType: ImplementationSpecific
            # ADD PATHTYPE
           backend: 
              service:
                 name: client-cluster-ip-service
                 port: 3000
         - path: /api/?(.*)
             #UPDATE PATH
           pathType: ImplementationSpecific
            # ADD PATHTYPE
           backend:
              service:
                    name: server-cluster-ip-service
                    port: 5000
